@@ -62,6 +62,9 @@ Translations:
   Albanian:             Besnik Bleta <besnikbleta@hotmail.com>
   Amharic:              Tegegne Tefera <tefera@online.no>
   Hindi:                Dhananjaya Sharma <dysxhi@yahoo.co.in>
+  Esperanto:            Tim Morley <t_morley@argonet.co.uk>
+  Belarusian:           Siarhei <mozilla_byx@poczta.fm>
+  Breton:               Philippe <drouizig@drouizig.org>
 
 Icons:
   Dean S. Jones <dean@gallant.com>
