@@ -78,6 +78,8 @@ wxLanguage ChooseLanguage()
         { _T("Afrikaans"), wxLANGUAGE_AFRIKAANS },
         { _T("Albanian"), wxLANGUAGE_ALBANIAN },
         { _T("Amharic"), wxLANGUAGE_AMHARIC },
+        { _T("Belarusian"), wxLANGUAGE_BELARUSIAN },
+        { _T("Breton"), wxLANGUAGE_BRETON },
         { _T("Bulgarian"), wxLANGUAGE_BULGARIAN },
         { _T("Catalan"), wxLANGUAGE_CATALAN },
         { _T("Chinese (Traditional)"), wxLANGUAGE_CHINESE_TRADITIONAL },
@@ -88,6 +90,7 @@ wxLanguage ChooseLanguage()
         { _T("Dutch"), wxLANGUAGE_DUTCH },
         { _T("English"), wxLANGUAGE_ENGLISH },
         { _T("Estonian"), wxLANGUAGE_ESTONIAN },
+        { _T("Esperanto"), wxLANGUAGE_ESPERANTO },
         { _T("Farsi"), wxLANGUAGE_FARSI },
         { _T("French"), wxLANGUAGE_FRENCH },
         { _T("Georgian"), wxLANGUAGE_GEORGIAN },
