@@ -84,6 +84,9 @@ Translation memory code uses Berkeley DB by Sleepycat Software
 <br>Albanian: Besnik Bleta
 <br>Amharic: Tegegne Tefera
 <br>Hindi: Dhananjaya Sharma
+<br>Esperanto: Tim Morley
+<br>Belarusian: Siarhei
+<br>Breton: Philippe
 
 
 <hr width="80%">
