@@ -11,6 +11,9 @@ Version 1.2.6
      Albanian (Besnik Bleta)
      Amharic (Tegegne Tefera)
      Hindi (Dhananjaya Sharma)
+     Esperanto (Tim Morley)
+     Belarusian (Siarhei)
+     Breton (Philippe)
 
 
 Version 1.2.5
